deploy/k8s/overlays/staging/patches/replicas.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aggregation-controlplane
spec:
  replicas: 1
